<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PFE_Bluetooth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  BluetoothChat -->

    <string name="send">Send</string>

    <string name="not_connected">You are not connected to a device</string>

    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Hand-E Manager.</string>

    <string name="title_connecting">connecting...</string>

    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>

    <string name="title_not_connected">not connected</string>


    <!--  DeviceListActivity -->

    <string name="scanning">scanning for devices...</string>

    <string name="select_device">select a device to connect</string>

    <string name="none_paired">No devices have been paired</string>

    <string name="none_found">No devices found</string>

    <string name="title_paired_devices">Paired Devices</string>

    <string name="title_other_devices">Other Available Devices</string>

    <string name="button_scan">Scan for devices</string>


    <!-- Options Menu -->

    <string name="secure_connect">Connect a device - Secure</string>

    <string name="insecure_connect">Connect a device - Insecure</string>

    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="profil">Profil</string>
    <string name="rapport">Rapport</string>
    <string name="tps">Temps Réel</string>
    <string name="app_name_short">Hand-E</string>
    <string name="description1">Connectez-vous à votre pince</string>
    <string name="connection">Se connecter</string>
    <string name="hello_name">Bonjour <xliff:g id="user_name">%1$s</xliff:g></string>
    <string name="hello_age">Âge: <xliff:g id="user_age">%1$d</xliff:g></string>
    <string name="MAC">Adresse MAC: <xliff:g id="MAC">%1$s</xliff:g></string>
    <string name="user_image">image_profil</string>
</resources>
