<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android2="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res-auto">


    <item

        android2:id="@+id/secure_connect_scan"
        android2:icon="@android:drawable/stat_sys_data_bluetooth"
        android:showAsAction="always"
        android2:visible="true"
        android2:title="@string/secure_connect" />


    <item

        android2:icon="@android:drawable/stat_sys_warning"
        android2:title="@string/insecure_connect"
        android2:visible="true"
        android2:id="@+id/insecure_connect_scan"
        android:showAsAction="always" />


    <item

        android2:icon="@android:drawable/ic_menu_search"

        android2:title="@string/discoverable"
        android2:visible="true"
        android2:id="@+id/discoverable"
        android:showAsAction="ifRoom" />



</menu>